<resources>
    <string name="app_name">PichangasPiscolas</string>
    <string name="title_drawer">Pichangas Piscolas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="listar_partidos">Listar Partidos</string>
    <string name="registrar_partido">Registrar Partido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_partidos">Registrar Partidos</string>
    <string name="agregar">Agregar</string>
    <string name="nombre_de_la_cancha">Nombre de la Cancha</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="auth_failed">auth_failed</string>
    <string name="not_log_in">no se logeo por google</string>
    <string name="not_firebase_auth">no se logeo por firebase</string>
</resources>
